@@ -44,7 +44,7 @@ acc = None
 
 try:
     dirs = os.listdir('/opt')
-except:
+except OSError:
     dirs = []
 
 for dir in dirs:
